--- a/modules/fateak/media/css/fateak.tree.css
+++ b/modules/fateak/media/css/fateak.tree.css
@@ -1,8 +1,11 @@
 .treeUL {margin-top:20px}
 .treeUL li {list-style:none; margin-bottom:15px}
 
-.treeHeader{font-size:18px; background-color:#59A459; color:white;padding:8px 15px;border-radius: 17px;display:inline-block;margin-left:-15px }
-.treeBody{font-size:14px; color:#666; background-color:#D3F5D3; opacity:0.9;padding: 0px 20px 0px 0px;margin-left:-20px; display:inline-block;}
+.treeHeader{font-size:18px; background-color:#59A459; color:white;padding:8px 15px;border-radius: 17px;display:inline-block;margin-left:-15px;cursor: pointer; }
+.treeHeader.treeOpen, .treeHeader.treeClose {padding:8px 15px 8px 30px;}
+.treeHeader.treeOpen:before {content: ""; border-width: 6px; border-style: solid; border-color: #FFFFFF transparent transparent transparent; display: block; position: absolute; top: 19px; left: -3px;}
+.treeHeader.treeClose:before {content: ""; border-width: 6px; border-style: solid; border-color: transparent transparent transparent #FFFFFF; display: block; position: absolute; top: 15px; left: 0px;}
+.treeBody{font-size:14px; color:#666; background-color:#D3F5D3; opacity:0.9;padding: 0px 20px 0px 0px;margin-left:-20px; display:inline-block;position: relative;}
 .treeBody span {margin-left:20px;margin-right:20px}
 .treeBody .treeBTN {display:inline-block; border:10px solid #D3F5D3;cursor:pointer; color:#355}
 .treeBody .treeBTN:hover {background-color:#E3F9E3; border: 10px solid #E3F9E3}
